--- a/index.html
+++ b/index.html
@@ -13,39 +13,33 @@
       <div class="calculator">
         <div class="screen">
           <div class="screen-last" id="lastOperationScreen"></div>
-          <div class="screen-current" id="currentOperationScreen">0</div>
+          <div class="screen-current" id="currentOperationScreen"></div>
         </div>
         <div class="buttons-grid">
-          <button class="btn btn-red span-2" id="clearBtn">CLEAR</button>
-          <button
-            class="btn btn-blue span-2"
-            id="deleteBtn"
-            onclick="this.blur();"
-          >
-            DELETE
-          </button>
-          <button class="btn" data-number>7</button>
-          <button class="btn" data-number>8</button>
-          <button class="btn" data-number>9</button>
-          <button class="btn" data-operator>÷</button>
+          <button class="btn-red span-2" id="clearBtn">CLEAR</button>
+          <button class="btn-blue span-2" id="deleteBtn">DELETE</button>
+          <button class="btn" value="7" data-number>7</button>
+          <button class="btn" value="8" data-number>8</button>
+          <button class="btn" value="9" data-number>9</button>
+          <button class="operationBtn btn btnDividid" data-operator>÷</button>
 
           <button class="btn" data-number>4</button>
           <button class="btn" data-number>5</button>
           <button class="btn" data-number>6</button>
-          <button class="btn" data-operator>×</button>
+          <button class="operationBtn btn btnMultiply" data-operator>×</button>
 
           <button class="btn" data-number>1</button>
           <button class="btn" data-number>2</button>
           <button class="btn" data-number>3</button>
-          <button class="btn" data-operator>−</button>
+          <button class="operationBtn btn btnSubtract" data-operator>−</button>
 
           <button class="btn" id="pointBtn">.</button>
           <button class="btn" data-number>0</button>
-          <button class="btn" onclick="this.blur();" id="equalsBtn">=</button>
-          <button class="btn" data-operator>+</button>
+          <button id="equalsBtn">=</button>
+          <button class="operationBtn btn btnAdd" data-operator>+</button>
         </div>
       </div>
     </main>
-    <script src="./main.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
