--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./calculator-icon-calculator-device-icon-with-png-and-vector-592509.png"
+    />
     <title>Calculator</title>
   </head>
   <body>
